--- a/apps/frontend/src/styles/globals.css
+++ b/apps/frontend/src/styles/globals.css
@@ -11,6 +11,11 @@
 .header {
   background-color: #1771ff;
   padding: 10px 10px 10px 10px;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 999;
+
 }
 
 .header-wrapper {
@@ -75,7 +80,17 @@
   padding: 10px 0;
   font-family: "Vazirmatn", "Poppins", sans-serif;
 }
-
+.nav-cart-num {
+  color: #fff;
+  background-color: #d32f2f;
+  border-radius: 20px;
+  padding: 0px 7px;
+  font-family: Vazirmatn, Poppins, sans-serif;
+  height: 25px;
+  width: 25px;
+  margin-right: -18px;
+  text-align: center;
+}
 .nav-button {
   background-color: transparent;
   width: 30px;
@@ -172,6 +187,7 @@
     max-width: 80%;
     margin: 0 auto;
     padding: 0 20px;
+    margin-top: 40px;
   }
   
   .hero-section {
@@ -349,7 +365,7 @@
   
   .title {
     font-size: 2rem;
-    margin: 30px 0 20px;
+    margin: 100px 0 20px;
     text-align: center;
     font-weight: normal;
   }
@@ -497,6 +513,7 @@
   padding: 20px;
   border-radius: 12px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  margin-top: 40px;
 }
 
 /* استایل عنوان */
